Transfer Forge files to the ForgeJars folder